# gifquant

./: .gitignore  Cargo.toml  readme.md
src/: gif.rs  lib.rs  main.rs  parse.rs  read.rs
