[package]
name = "gifquant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
image = "0.24.7"
color_quant = "1.1.0"
weezl = "0.1.7"


# full optimization when building for release
[profile.dev]
opt-level = 3
